# FlyingManipulatorAutoCatch

./: README.md
src/VINS-RGBD-FAST/config/realsense/: vio d455.yaml  vio.yaml  vio_atlas.yaml
src/VINS-RGBD-FAST/output/: extrinsic_parameter.txt
src/VINS-RGBD-FAST/vins_estimator/launch/realsense/: realsense_vio.launch
src/compressedimg2img/: CMakeLists.txt  README.md  nodelet_description.xml  package.xml
src/compressedimg2img/src/: compressedimg2img_node.cpp  compressedimg2img_nodelet.cpp
src/tag_px4ctl/: CMakeLists.txt  README.md  board copy 2.txt  board copy.txt  board.txt  package.xml  tag_servo.rviz
src/tag_px4ctl/launch/: mocap.launch  rviz.launch  tag_test.launch  usb_cam-test.launch
src/tag_px4ctl/scripts/: rspx4.sh  rspx4_atlas.sh  tag_px4_mocap.sh
src/tag_px4ctl/src/: TagDetector.hpp  auto_catch_ctl.cpp  tag_aided_loc_node.cpp  tag_det.cpp  tag_servo_node.cpp
